...
        super.viewDidLoad()
        configureUI()
        updateImageView()
        presenter = MovieQuizPresenter(viewController: self)
        alertPresenter = AlertPresenter(viewController: self)
        imageView.layer.cornerRadius = 20
        counterLabel.accessibilityIdentifier = "Index"
    }

    func show(quiz step: QuizStepViewModel) {
        imageView.image = step.image
        textLabel.text = step.question
        counterLabel.text = step.questionNumber
...
